Notas con fecha de activación y caducidad implementadas (a la hora de la ejecución el calendario va con retraso). Imágenes de categorías casi implementadas.

--- a/app/src/main/res/layout/category_edit.xml
+++ b/app/src/main/res/layout/category_edit.xml
@@ -18,6 +18,11 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
+    <Spinner
+        android:id="@+id/spinnerImages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
