--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -32,28 +32,62 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
+
     </LinearLayout>
 
-    <TextView android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/body" />
 
     <EditText
         android:id="@+id/body"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="43dp"
         android:layout_weight="15"
         android:scrollbars="vertical" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <Spinner
         android:id="@+id/spinner_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/confirm"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/confirm" />
+        android:text="   Fecha de activación          Fecha de caducidad" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <CalendarView
+            android:id="@+id/activationCalendar"
+            android:layout_width="146dp"
+            android:layout_height="359dp" />
+
+        <CalendarView
+            android:id="@+id/expirationCalendar"
+            android:layout_width="142dp"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/confirm"
+            android:layout_width="77dp"
+            android:layout_height="71dp"
+            android:text="@string/confirm"
+            android:translationY="120dp" />
+    </LinearLayout>
 
 </LinearLayout>
