--- a/app/src/main/res/layout/image_category.xml
+++ b/app/src/main/res/layout/image_category.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/categoryImage"
-        android:layout_width="85dp"
+        android:layout_width="50dp"
         android:layout_height="55dp"
         android:contentDescription="Imagen"
         android:src="@drawable/ic_local_dining_black_24dp"
@@ -17,11 +17,13 @@
 
     <TextView
         android:id="@+id/categoryText"
-        android:layout_width="303dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:text="Categoria"
         android:textSize="29sp"
+        android:textStyle="bold"
         tools:layout_editor_absoluteX="94dp"
         tools:layout_editor_absoluteY="16dp" />
 </LinearLayout>
