--- a/app/src/main/res/layout/categories.xml
+++ b/app/src/main/res/layout/categories.xml
@@ -3,9 +3,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ListView android:id="@+id/list"
+    <ListView
+        android:id="@+id/list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
     <TextView android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
